--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Хоттабыч главная</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./img/desktop-1/logo.png" alt="logo">  
+            <nav>
+                <ul>
+                    <li><a href="#">главная</a></li>
+                    <li><a href="#">проекты</a></li>
+                    <li><a href="#">про нас</a></li>
+                    <li><a href="#">услуги</a></li>
+                    <li><a href="#">контакты</a></li>
+                </ul>
+            </nav>
+    </headerd
+    <main>
+        <section>
+            <h1>Проекты</h1>
+            <a href="#">все</a>
+        </section>
+        <section>
+            <h2>Изготовление
+                нестандартных конструкций</h2>
+            <h5>почему мы</h5> 
+            <table>
+                <thead>
+                    <td><h2>400+</h2></td>
+                    <td><h2>100+</h2></td>
+                    <td><h2>60+</h2></td>
+                </thead>
+                <tbody>
+                    <td><h5>реализованных проектов по всей стране</h5></td>
+                    <td><h5>заказчиков из разных городов</h5></td>
+                    <td><h5>оформленных всероссийских мероприятий</h5></td>
+                </tbody>
+            </table>   
+        </section>
+    </main>
+    <footer></footer>        
 </body>
 </html>
