--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#">контакты</a></li>
                 </ul>
             </nav>
-    </headerd
+    </header>
     <main>
         <section>
             <h1>Проекты</h1>
@@ -36,7 +36,7 @@
                 </thead>
                 <tbody>
                     <td><h5>реализованных проектов по всей стране</h5></td>
-                    <td><h5>заказчиков из разных городов</h5></td>
+                    <td><h5>заказчиков из разных городов</h5></td>
                     <td><h5>оформленных всероссийских мероприятий</h5></td>
                 </tbody>
             </table>   
