--- a/index.html
+++ b/index.html
@@ -7,41 +7,92 @@
     <title>Хоттабыч главная</title>
 </head>
 <body>
-    <header>
+    <header  id="t1">
         <img src="./img/desktop-1/logo.png" alt="logo">  
             <nav>
                 <ul>
-                    <li><a href="#">главная</a></li>
-                    <li><a href="#">проекты</a></li>
-                    <li><a href="#">про нас</a></li>
-                    <li><a href="#">услуги</a></li>
-                    <li><a href="#">контакты</a></li>
+                    <li><a href="#t1">главная</a></li>
+                    <li><a href="#t2">проекты</a></li>
+                    <li><a href="#t3">про нас</a></li>
+                    <li><a href="#t4">услуги</a></li>
+                    <li><a href="#t5">контакты</a></li>
                 </ul>
             </nav>
+        <button type="button" disabled><img src="./img/desktop-2/left-arrow.svg" alt="left-arrow" width="20"></button>
+        <button type="button"><img src="./img/desktop-2/right-arrow.svg" alt="right-arrow" width="20"></button>
+        <p><span>1</span><span>/</span><span>5</span></p>
+        <a href="#">открыть проект</a>
     </header>
     <main>
         <section>
-            <h1>Проекты</h1>
+            <h1 id="t2">Проекты</h1>
             <a href="#">все</a>
+            <ul>
+                <li><a href="#">ФОТОЗОНА ДЛЯ «ПОЛЮС»</a></li>
+                <li><a href="#">ФАСАД В ТЦ «ОРЕЛ»</a></li>
+                <li><a href="#">ВЫВЕСКА ДЛЯ КОФЕЙНИ «GREEN» </a></li>
+                <li><a href="#">ПИНБОЛ ДЛЯ ФЕСТИВАЛЯ «НА СВОБОДНОМ»</a></li>
+            </ul>
         </section>
         <section>
-            <h2>Изготовление
+            <h2 id="t3">Изготовление
                 нестандартных конструкций</h2>
             <h5>почему мы</h5> 
             <table>
-                <thead>
-                    <td><h2>400+</h2></td>
-                    <td><h2>100+</h2></td>
-                    <td><h2>60+</h2></td>
-                </thead>
-                <tbody>
+                <tr>
+                    <th><h2>400+</h2></th>
+                    <th><h2>100+</h2></th>
+                    <th><h2>60+</h2></th>
+                </tr>
+                <tr>
                     <td><h5>реализованных проектов по всей стране</h5></td>
                     <td><h5>заказчиков из разных городов</h5></td>
                     <td><h5>оформленных всероссийских мероприятий</h5></td>
-                </tbody>
+                </tr>
             </table>   
+        </section>
+        <section>
+            <h2 id="t4">Уcлуги</h2>
+                <ul>
+                    <li><a href="#">ПРОЕКТ «ПОД КЛЮЧ»</a></li>
+                    <li><a href="#">ВИЗУАЛЬНОЕ ОФОРМЛЕНИЕ</a></li>
+                    <li><a href="#">СЛОЖНЫЕ ТЕХ. РЕШЕНИЯ</a></li>
+                    <li><a href="#">РЕКЛАМНАЯ ПРОДУКЦИЯ</a></li>
+                </ul>
+                <p> Услуга включает индивидуальную разработку макета, план работ, смету и завершение проекта в соответствии с пожеланиями заказчика и минимальной его вовлеченностью.</p>
+                <h4>начальная цена от:  $175/м2</h4>
+                <p>*финальная стоимость зависит от площади проекта и его характеристик</p>
+                <h3>СЛОЖНЫЕ ТЕХ. Решения</h3>
+                <h3>шаги</h3>
+                <ul>
+                    <li><p>брифинг</p></li>
+                    <li><p>ПРОектирование<img src="./img/desktop-1/red-arrow.svg" alt="red-arrow"></p></li>
+                    <li><p>зонирование<img src="./img/desktop-1/red-arrow.svg" alt="red-arrow"></p></li>
+                    <li><p>визуализация</p></li>
+                    <li><p>Моделирование<img src="./img/desktop-1/red-arrow.svg" alt="red-arrow"></p></li>
+                    <li><p>реализация</p></li>
+                </ul>
+        </section>
+        <section>
+            <h2 id="t5">Создадим проект для вас</h2>
+            <ul>
+                <li><p>НАпишите нам</p>
+
+                </li>
+
+                <li><p>Написать нам:</p>
+                    <ul class="social-icons-2">
+                        <li><a href="#"><img src="./img/footer/telegram.svg" alt="tg" width="30"></a></li>
+                        <li><a href="#"><img src="./img/footer/whatsapp.svg" alt="wtsp" width="30"></a></li>
+                        <li><a href="#"><img src="./img/footer/viber.svg" alt="vbr" width="30"></a></li>
+                        <li><a href="#"><img src="./img/footer/facebook-messenger.svg" alt="fb" width="30"></a></li>
+                    </ul>
+                </li>
+                <li><p>Мы в соц. сетях:</p></li>
+            </ul>
         </section>
     </main>
     <footer></footer>        
 </body>
 </html>
+
